Projects.css
/* Navigation Bar for better Navigation of pages */
.navbar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background: linear-gradient(135deg, #444349, #1e0f3f);;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 20px 40px;
    box-sizing: border-box;
    
    z-index: 1000;
    /* ensures navbar stays on top of everything */
}
.navbar-socials {
    display: flex;
    align-items: center;
    margin-right: 70px;
    gap: 25px;
}

.navbar-socials img {
    width: 40px;
    height: 40px;
    transition: transform 0.3s ease;
}

.github,.itchio,.linkedin {
    filter: invert(40%) sepia(60%) saturate(300%) hue-rotate(900deg);
}

.navbar-socials img:hover {
    transform: scale(1.3);
}

.navbar-right {
    display: flex;
    flex-wrap: wrap;
    gap: 12px;
    justify-content: center;
    flex: 1;
}

.navbar-spacer {
    height: 80px;
    /* same height as navbar to prevent content overlap */
}
.active-page {
    background: rgb(38, 1, 46);
    color: white;
    border-radius: 10px;
}

.navbar-btn {
    background: none;
    border: none;
    padding: 10px 18px;
    border-radius: 10px;
    font-weight: bold;
    text-shadow: 1px 1px 1px black;
    transition: background 0.5s ease, transform 0.5s ease;
}

/* Hover effect */
.nav-btn:hover {
    background: rgb(38, 1, 46);;
    transform: scale(1.05);
}

/* button styling Section for example: the about me button */
.GamePJ-btn,
.CodingPJ-btn {
    color: white;
    padding: 12px 26px;
    border-radius: 10px;
    font-weight: bold;
    text-decoration: none;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
    transition: all 0.25s ease;
    text-shadow: 1px 1px 1px black;
}

.cv-btn:hover,
.AboutMe-btn:hover,
.MyExperience-btn:hover,
.MyProjects-btn:hover,
.Home-btn:hover,
.Contact-btn:hover {
    transform: translateY(-3px);
}

.arrow-btn:hover {
    background: silver;
    transform: translateX(-5px);
}

span {
    color: black;
    font-weight: bold;
}

body {
    background-image: url("BlackBG.jpg");
    background-size: cover;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: flex-start;
    min-height: 100vh;
    margin: 0;
    padding-top: 30px;
    opacity: 0;
    transition: opacity 0.3s ease-in;
}

body.loaded {
    opacity: 1;
}

h1,
h2 {
    color: white;
    text-align: center;
    margin-bottom: 50px;
    text-shadow: 1px 1px 1px white;
}

.arrow-btn-left {
    position: fixed;
    top: 20px;
    left: 25px;
    color: white;
    font-size: 20px;
    font-weight: bold;
    text-decoration: none;
    z-index:1200;
    transition: color 0.3 ease, transform 0.2 ease;
    text-shadow: 2px 2px 2px black;

}

.arrow-btn-left:hover {
    background: rgba(255, 255, 255, 0.711);
    transform: translateX(-5px);
}

.flipped {
    display: inline-block;
    transform: scaleX(-1);
}

.arrow-btn-left span {
    color: white;
    font-weight: bold;
}

/* HTML Scroll functionality */
html {
    scroll-behavior: smooth;
}

/* -------------------------------------GameLogo Container Placement-------------------------------------------- */
.section-header {
    text-align: center;
    font-size: 32px;
    color: white;
    margin-top: 60px;
    margin-bottom: 25px;
    text-shadow: 2px 2px 2px black;
}

.Projects-Section {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 40px;
    padding: 20px;
}

.section-divider,
.top-hr {
    width: 100%;
    height: 3px;
    border: none;
    border-radius: 5px;
   background: linear-gradient(135deg, #444349, #1e0f3f);
    margin: 60px auto 40px auto;
    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
}

/* -------------------------------------SpeedRacers LOGO----------------------------------------- */

/* SpeedRacers Card */
.SRlogo-card {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    border: 4px solid purple;
    background: rgb(200, 180, 59);
    border-radius: 20px;
    padding: 25px;
    width: 500px;
    height: 750px;
    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.5);
    transition: transform 0.3s ease, box-shadow 0.3 ease;
}

/* my SpeedRacers Video*/
.SRVideo {
    width: 100%;
    height: 350px;
    border: 2px solid purple;
    object-fit: cover;
    border-radius: 10px;
    margin-right: 5px;
}

/* Game Description Text */
.SRlogo-text {
    text-align: left;
    margin-bottom: 50px;
    color: purple;
    max-width: 600px;
    font-size: 20px;
    font-weight: bold;
    line-height: 1.5;
}

.SRlogo-text h2 {
    justify-content: center;
    color: yellow;
    margin-bottom: 20px;
    text-shadow: 4px 4px 4px purple;
}

.SRlogo-card:hover {
    transform: translateY(-5px);
    box-shadow: 0 6px 15px yellow;
}

.SRitch-btn {

    padding: 10px 25px;
    text-decoration: none;
    font-weight: bold;
    color: purple;
    border-radius: 10px;
    border: 3px solid purple;
    transition: 0.3 ease;
    text-shadow: 2px 2px 2px yellow;
}

.SRitch-btn:hover {
    background: purple;
    border: 3px solid yellow;
    color: yellow;
    transform: scale(1.05);
    text-shadow: 2px 2px 2px purple;
}

.SRmoreinfo-btn {
    padding: 10px 25px;
    border-radius: 10px;
    text-decoration: none;
    font-weight: bold;
    color: purple;
    border: 3px solid purple;
    transition: 0.3 ease;
    text-shadow: 2px 2px 2px yellow;
    margin-left: 70px;
}

.SRmoreinfo-btn:hover {
    background: purple;
    color: yellow;
    border: 3px solid yellow;
    transform: scale(1.05);
    text-shadow: 1px 1px 1px purple;
}
/* ... */

